Grok changes
************

0.12.1 (????-??-??)
===================

Bug fixes
---------

* Removed quickly hacked testsetup code from grok.testing.

* Port fix of zope.formlib to correctly adapt the context to a FormField's
  interface, not the field'

0.12 (2008-04-22)
=================

Feature changes
---------------

* The new release needs new version of grokproject, please do::

    $ easy_install -U grokproject

* Added testsetup classes in grok.testing to improve easy setup of
  unit- and functional tests.

* Add support for viewlets and viewlet managers, ``grok.Viewlet``
  and ``grok.ViewletManager``.

* Add a new directive, ``grok.order()``, which can be used to help
  sort components. At the time it is not used yet, but we intend to
  use it for the viewlets support. Note that this means Grok now
  requires Martian 0.9.3 or higher. See ``grok.interfaces`` for more
  documentation on this directive.

* Now depend on ``z3c.autoinclude``. This allows the use of the
  ``<includeDependencies package="."/>`` directive, which automatically loads
  up ZCML needed for the dependencies listed in your project's
  ``setup.py``. The new release of grokproject adds this line
  automatically. Upgrade ``grokproject`` to make use of this
  functionality in new projects::

    $ easy_install -U grokproject

* Classes that end with "-Base" are no longer implicitly considered base
  classes. These classes need to have the grok.baseclass() directive added to
  them explicitly.

  See also the `upgrade notes`_ for information on how to update
  your existing projects.

.. _`upgrade notes`: http://grok.zope.org/project/upgrade-notes

Bug fixes
---------

* Do not register the publishTraverse and browserDefault methods of the
  JSON component as views.

* Methods with names that start with an '_' are not registered as views
  for XMLRPC, REST and JSON components.

* Use a configuration action for the registration of the static directory.
