@@ -17,7 +17,7 @@
 import urllib
 
 import zope.location.location
-from zope import component
+from zope import component, interface
 from zope.traversing.browser.interfaces import IAbsoluteURL
 from zope.traversing.browser.absoluteurl import _safe as SAFE_URL_CHARACTERS
 
@@ -188,3 +188,14 @@ def determine_class_component(module_info, class_,
     check_module_component(class_, component,
                            component_name, component_directive)
     return component
+
+def check_provides_one(obj):
+    provides = list(interface.providedBy(obj))
+    if len(provides) < 1:
+        raise GrokError("%r must provide at least one interface "
+                        "(use zope.interface.classProvides to specify)."
+                        % obj, obj)
+    if len(provides) > 1:
+        raise GrokError("%r provides more than one interface "
+                        "(use grok.provides to specify which one to use)."
+                        % obj, obj)
