@@ -7,6 +7,17 @@ Grok changes
 Bug fixes
 ---------
 
+* The grokkers for adapters and global utilities did not use the
+  correct value for the *provided* interface in the configuration
+  action discriminator.  Because of this, uninformative and
+  potentially wrong conflict errors would occur, as well as no
+  conflict where a conflict should have occurred.
+
+* The grokker for the ``global_utility()`` directive did immediate
+  registrations instead of generating configuration actions.
+  Therefore it did not provoke ``ConflictErrors`` for conflicting
+  registrations.
+
 * Removed quickly hacked testsetup code from grok.testing.
 
 * Port fix of zope.formlib to correctly adapt the context to a FormField's
